# ADA502FireGuardProject

./: .env  Fireguard_API.py  README.md  app.py  database.py  database_test.py  docker-compose.yml  frostAPI.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  ci_pipeline.yml  code_quality.yml  unit_test.yml
API/: Fireguard_API.py  app.py  database.py  pyproject.toml  test.py
API/fireguard_api/: Fireguard_API.py  app.py
API/fireguard_api/kc/: auth.py  models.py
API/fireguard_app/: Fireguard_API.py  app.py  route_auth.py  route_protected.py
API/fireguard_app/db_locations/: crud.py  database.py
API/fireguard_app/kc/: auth.py  get_token.py  models.py
API/messaging/: publisher.py  subscriber.py
API/tests/: test_crud.py  test_fireguardAPI.py
docker/: Dockerfile
docker/api/: Dockerfile
docker/auth/: Dockerfile  base_realm.json  fireguardRealm.json  testRealm.json
docker/kc/: docker-compose.yml  dockerfile
kc/: auth.py  models.py
tests/: unit_tests.py
