[tool.poetry]
name = "ada502fireguardproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
flake8 = "^7.1.2"
dynamic-frcm = "^1.0.1"
pymongo = "^4.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
