[tool.poetry]
name = "fireguard-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "fireguard_api" }]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
flake8 = "^7.1.2"
dynamic-frcm = "^1.0.1"
pymongo = "^4.11.2"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.11.3"
python-decouple = "^3.8"
python-keycloak = "^5.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
